--- a/site/Module_3_Solution/index.html
+++ b/site/Module_3_Solution/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        <div id="collapsable-nav" class="collapse navbar-collapse">
+        <div id="collapsable-nav" class="collapse navbar-collapse text-center">
           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
               <a href="menu-categories.html">
